<?xml version="1.0"?>

<package format="3">

  <name>pointcloud_io</name>
  <version>0.3.17</version>
  <description>Tools to either read and publish or subscribe and write PointCloud2 messages.</description>

  <license>BSD</license>
  <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>
  <author email="rdiethelm@anybotics.com">Remo Diethelm</author>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="EWING_KANG@glorymakeup.com">Ewing Kang</maintainer>

  <url type="website">http://github.com/anybotics/point_cloud_io</url>
  <url type="bugtracker">http://github.com/anybotics/point_cloud_io/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--   <build_depend>cmake_clang_tools</build_depend> -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pcl_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
